<resources>
    <string name="app_name">My Application</string>
    <string name="worker_name">姓名</string>
    <string name="group_name">组名</string>
    <string name="Internal_managemen">内外勤管理</string>
    <string name="check">考勤</string>
    <string name="rejister">签到</string>
    <string name="leave">请假</string>
    <string name="out">外出</string>
    <string name="business_report">业务汇报</string>
    <string name="day">日报</string>
    <string name="week">周报</string>
    <string name="month">月报</string>
    <string name="timeandlocation">打卡时间和地点</string>
    <string name="onwork">上班打卡</string>
    <string name="offwork">下班打卡</string>
    <string name="sign">个性签名:</string>
    <string name="mPhone">12345678000</string>
    <string name="mPetname">tom</string>
    <string name="mGroupname">RUA</string>
    <string name="phone">电话</string>
    <string name="mypetname">昵称</string>
    <string name="contract_people">联系人</string>
    <string name="contract_superfriend">常用联系人</string>
    <string name="contract_friend">我的好友</string>
    <string name="contract_group">我的群组</string>
    <string name="contract_create">创建团队</string>
    <string name="contract_xft">老谢</string>
    <string name="contract_wyf">老魏</string>
    <string name="contract_zwg">国哥</string>
    <string name="contract_xkp">老徐</string>
    <string name="contract_ssy">煜神</string>
    <string name="contract_tip01">搜索功能暂未实装</string>
    <string name="contract_tip02">添加联系人功能暂未实装</string>
    <string name="create">创建团队</string>
    <string name="group_name01">团队名称</string>
    <string name="contract_name">请输入团队名称</string>
    <string name="contract_job">所在行业</string>
    <string name="contract_tip">必选</string>
    <string name="contact_size">人员规模</string>
    <string name="job_tip">测试</string>
    <string name="size_tip">测试</string>
    <string name="contact_loc">地区</string>
    <string name="contact_member">团队成员</string>
    <string name="addmember">添加团队成员</string>
    <string name="create_now">立即创建团队</string>
    <string name="myfriend">我的好友</string>
    <string name="search">搜索</string>
    <string name="newfriend">新的好友</string>
    <string name="name">姓名</string>
    <string name="xft">谢非同</string>
    <string name="title">我的好友</string>
    <string name="friend">我的好友</string>
    <string name="group">我的群组</string>
    <string name="createteam">创建团队</string>
</resources>
