<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:id="@+id/create_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/back"
            />
        <TextView
            android:id="@+id/create_contact"
            android:layout_width="wrap_content"
            android:text="@string/create"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="@dimen/large"
            android:layout_height="wrap_content" />
    </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="20dp">
    <TextView
        android:id="@+id/contract_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="@dimen/middle"
        android:layout_marginLeft="15dp"
        android:textColor="@color/black"
        android:text="@string/group_name"/>
    <EditText
        android:id="@+id/contract_grpname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:hint="@string/contract_name"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/contract_job"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="@dimen/middle"
            android:layout_marginLeft="15dp"
            android:textColor="@color/black"
            android:text="@string/contract_job"/>
       <Spinner
           android:id="@+id/spinner_job"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="5"
         />


    </LinearLayout>

 <LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal">
<TextView
    android:id="@+id/contract_size"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    android:textSize="@dimen/middle"
    android:layout_marginLeft="15dp"
    android:textColor="@color/black"
    android:text="@string/contact_size"/>
<Spinner
    android:id="@+id/spinner_size"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="5"
    />


</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/contract_loc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="@dimen/middle"
            android:layout_marginLeft="15dp"
            android:textColor="@color/black"
            android:text="@string/contact_loc"/>
        <Spinner
            android:id="@+id/spinner_loc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:text="@string/contact_member"
        android:textSize="@dimen/middle"
        android:layout_marginLeft="15dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/create"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addmember"
            android:textColor="@color/black"
            android:textSize="@dimen/middle"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="7dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/create_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_now"
        android:textColor="@color/black"
        android:textSize="@dimen/middle"
        android:layout_marginTop="20dp"
        />


</LinearLayout>
