<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@mipmap/background"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
     >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mSet"
                android:text="个人设置"
                android:gravity="left"
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/mMes"
                android:text="个人信息"
                android:gravity="right"
                android:layout_width="179dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="160dp"
                android:gravity="center"
                android:src="@mipmap/head"
                />


            <TextView
                android:id="@+id/textView"
                android:layout_width="280dp"
                android:layout_height="158dp"
                android:gravity="center"
                android:text="@string/mPetname"
                android:textSize="100dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="358dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/mSign"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:textSize="25dp"
                android:cursorVisible="false"
                android:gravity="center"
                android:text="@string/sign" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="编辑个性签名"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/mGroupname"
            android:textSize="100dp"/>

    </LinearLayout>
</LinearLayout>