<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="9"
            android:text="  联系人"
            android:textSize="@dimen/large" />

        <ImageView
            android:id="@+id/search_title"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:src="@drawable/search" />

        <ImageView
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:src="@drawable/add" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/friend"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:id="@+id/myfriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend"
            android:layout_marginLeft="15dp"
            android:textSize="@dimen/middle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/group"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:id="@+id/mygroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group"
            android:layout_marginLeft="15dp"
            android:textSize="@dimen/middle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/create"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:id="@+id/creategroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createteam"
            android:layout_marginLeft="15dp"
            android:textSize="@dimen/middle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/portrait1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/superfriend"/>

        <TextView
            android:id="@+id/function1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/middle"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:text="常用联系人"/>

    </LinearLayout>
    <ListView
        android:id="@+id/list2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"


        >

    </ListView>
</LinearLayout>